# ipixel-mcp

./: README.md
deploy/: README.md  observability.md  runbook.md  secrets.md
deploy/cloudflared/: config.yml
deploy/systemd/: cloudflared.service  ipixel-mcp.service
deploy/tailscale/: acls.hujson
docs/: PLAN.md  PLAN_REVIEW.md  SECURITY_REVIEW_pypixelcolor.md
examples/: README.md
examples/claude-code-notify-hook/: README.md  settings.json
examples/tailnet-service-display/: README.md  display.py
server/: .gitignore  Makefile  README.md  constraints.txt  pyproject.toml
server/assets/: manifest.json
server/assets/ascii/: heart.txt
server/ipixel_mcp/: __init__.py  __main__.py  app.py  auth.py  ble_backend.py  device.py  display_state.py  jobs.py  logging_utils.py  safety.py
server/ipixel_mcp/modes/: __init__.py  display.py  gallery.py  notify.py
server/tests/: conftest.py  test_app.py  test_app_scopes.py  test_auth.py  test_auth_jwt.py  test_ble_backend.py  test_controls.py  test_device.py  test_display.py  test_display_image.py  test_display_state.py  test_fixes_regression.py  test_gallery.py  test_integration_app.py  test_jobs.py  test_logging_utils.py  test_notify.py  test_safety.py  test_safety_image.py
worker/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
worker/src/: approval.ts  github-handler.ts  index.ts  proxy.ts  scopes.ts  types.ts
worker/test/: approval.test.ts  authorize-routing.test.ts  github-handler.test.ts  proxy.test.ts  scopes.test.ts  state.test.ts
