[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipixel-mcp-server"
version = "0.0.1"
description = "Stateless MCP origin server driving an iPixel Color BLE LED matrix"
requires-python = ">=3.11"
# NOTE (review F-7): these are upper/lower bounded here; a fully hash-locked
# lockfile (uv/pip-tools) lands in Phase 1. Pillow and bleak are security- and
# behaviour-sensitive respectively and must be pinned tightly.
dependencies = [
    "mcp>=1.12,<2",
    "starlette>=0.37,<1",
    "uvicorn[standard]>=0.30,<1",
    "pypixelcolor==0.4.0",
    "Pillow>=10.3,<12",
    "bleak>=0.22,<0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pip-audit",
]

[project.scripts]
ipixel-mcp = "ipixel_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["ipixel_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
